testsuite/tests/typecheck/should_fail/T18851.stderr

T18851.hs:35:5: error:
    • Couldn't match type ‘B’ with ‘A’
        arising from a superclass required to satisfy ‘C int0 A’,
        arising from a use of ‘f’
    • In the expression: f @A @B
      In an equation for ‘g’: g = f @A @B
